Removed deprecated function for geting the thread id